[metadata]
name = pytest_test_utils
version = 0.0.2
license = Apache License 2.0
license_file = LICENSE
url = https://github.com/iterative/pytest-test-utils
platforms=any
authors = Saugat Pachhai
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Pytest

[options]
python_requires = >=3.7
zip_safe = False
packages = find:
install_requires=
    pytest

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-sugar==0.9.4
    pylint==2.11.1
    mypy==0.910

[options.entry_points]
pytest11 =
    pytest_test_utils = pytest_test_utils.pytest_plugin

[options.package_data]
pytest_test_utils = py.typed

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
